# Lisbeth

./: .gitignore  .project  .readthedocs.yaml  BOM.xlsx  README.md  SourceTreeKey.ppk  Zortrax-M200-Lower-fan-shroud-v3.zproj  github-token.txt  mkdocs.yml  pyproject.toml  references.txt  smartgitoken.txt
CAD/: BodyStructure.iam  Chewbacca.iam  Chewbacca.ipj  Leg Long.iam  Leg Short.iam  Lisbeth.iam  Lisbeth.ipj
CAD/Body/: BodyCover.ipt  BodyDamepenerMold.ipt  BodyDampener Mold.ipt  BodyDampener.ipt  BodyDampener.stp  BodyDampenerMold.ipt  BodyHipSupport.iam  BodySiliconeRubber.ipt  BodyStructure Back.ipt  BodyStructure Centre Bottom.ipt  BodyStructure Centre Top.ipt  BodyStructure Centre.ipt  BodyStructure Front.ipt  BodyStructure Head.ipt  BodyStructure HipSupport.ipt  BodyStructure LumbarSupport.ipt  BodyStructure LumbarSupportSmall.ipt  BodyStructure Plate.ipt  BodyStructure Side.ipt  BodyStructure Tail.ipt
CAD/Foot/: Foot.iam  FootSensorCalibrationTool.ipt  FootSensorPCB.ipt  Toe.ipt  ToeDampener.ipt  ToeDampenerMold.ipt  ToeDampenerStressed.ipt  ToeMold.ipt  ToePalm.ipt  ToeRubberMold.ipt  ToeSilikoneRubber.ipt
Theory/: log.txt
code/controller/: .cproject  .project  CMakeLists.txt  CMakeLists.txt.txt
code/controller/cmake/: compiler.cmake
code/controller/config/: config.yaml
code/controller/include/: BodyPlanner.hpp  ComplementaryFilter.hpp  Controller.hpp  Estimator.hpp  Filter.hpp  FootTrajectoryGenerator.hpp  FootTrajectoryGeneratorBezier.hpp  FootstepPlanner.hpp  Gait.hpp  GaitPlanner.hpp  InvKin.hpp  KeyboardListener.hpp  MPC.hpp  MPCController.hpp  MPCSolver.hpp  MpcController.hpp  MpcWrapper.hpp  Params.hpp  QPWBC.hpp  StatePlanner.hpp  Types.h  Utils.hpp  WBCController.hpp  WBCSolver.hpp  WbcController.hpp  WbcWrapper.hpp  st_to_cc.hpp
code/controller/include/qrw/: Estimator.hpp  FootTrajectoryGenerator.hpp  Gait.hpp  Kinematics.hpp  Params.hpp  Types.h  Utils.hpp
code/controller/install/include/quadruped/reactive/walking/: config.hh
code/controller/install/lib/: libquadruped-reactive-walking.so.UNKNOWN
code/controller/install/lib/cmake/quadruped-reactive-walking/: quadruped-reactive-walkingConfig.cmake  quadruped-reactive-walkingConfigVersion.cmake  quadruped-reactive-walkingTargets-release.cmake  quadruped-reactive-walkingTargets.cmake
code/controller/install/lib/pkgconfig/: quadruped-reactive-walking.pc
code/controller/install/share/doc/quadruped-reactive-walking/doxygen-html/: FootTrajectoryGenerator_8cpp.html  FootTrajectoryGenerator_8cpp__incl.dot  FootTrajectoryGenerator_8cpp__incl.md5  FootstepPlanner_8cpp.html  FootstepPlanner_8cpp__incl.dot  FootstepPlanner_8cpp__incl.md5  Gait_8cpp.html  Gait_8cpp__incl.dot  Gait_8cpp__incl.md5  InvKin_8cpp.html  InvKin_8cpp__incl.dot  InvKin_8cpp__incl.md5  MPC_8cpp.html  MPC_8cpp.js  MPC_8cpp__incl.dot  MPC_8cpp__incl.md5  Params_8cpp.html  Params_8cpp__incl.dot  Params_8cpp__incl.md5  QPWBC_8cpp.html  QPWBC_8cpp__incl.dot  QPWBC_8cpp__incl.md5  StatePlanner_8cpp.html  StatePlanner_8cpp__incl.dot  StatePlanner_8cpp__incl.md5  Types_8h.html  Types_8h.js  Types_8h__incl.dot  Types_8h__incl.md5  Types_8h_source.html  dir_456c59b311d57f1ab55df50315e0ae8d.html  dir_456c59b311d57f1ab55df50315e0ae8d.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  gepadd_8cpp.html  gepadd_8cpp.js  gepadd_8cpp__incl.dot  (+24 more)
code/controller/install/share/doc/quadruped-reactive-walking/doxygen-html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_c.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js
code/controller/python/: .cproject  .project  CMakeLists.txt  ControllerStub.cpp  EstimatorStub.cpp  EstimatorWrapper.cpp  FootTrajectoryGeneratorWrapper.cpp  FootstepPlannerWrapper.cpp  GaitStub.cpp  GaitWrapper.cpp  InvKinWrapper.cpp  MPCStub.cpp  MPCWrapper.cpp  ParamsStub.cpp  ParamsWrapper.cpp  QPWBCWrapper.cpp  StatePlannerStub.cpp  Stubs.cpp  WBCStub.cpp  gepadd.cpp
code/controller/pythonBinding/: CMakeLists.txt  gepadd.cpp
code/controller/pythonBinding/controller_core/: __init__.py
code/controller/scripts/: Controller.py  Estimator.py  HardwareInterface.py  InvKin.py  Joystick.py  Keyboard.py  MPC_Wrapper.py  ModelLoader.py  PyBulletSimulator.py  QP_WBC.py  RemoteControl.py  Types.py  Utils.py  gamepadClient.py  keyboard.py  main.py  main_minimal_controler.py  main_solo12_control.py  main_solo12_demo_estimator.py  masterboard_utils.py  plot_IMU_mocap_result.py  plot_IMU_mocap_result_bis.py  solo12.py  solo12InvKin.py  utils_mpc.py
code/controller/scripts/solopython/: solo_estimator.py
code/controller/src/: BodyPlanner.cpp  ComplementaryFilter.cpp  Controller.cpp  Estimator.cpp  Filter.cpp  FootTrajectoryGenerator.cpp  FootTrajectoryGeneratorBezier.cpp  FootstepPlanner.cpp  Gait.cpp  GaitPlanner.cpp  InvKin.cpp  KeyboardListener.cpp  Kinematics.cpp  MPC.cpp  MPCController.cpp  MPCSolver.cpp  MpcController.cpp  MpcWrapper.cpp  Params.cpp  QPWBC.cpp  StatePlanner.cpp  Utils.cpp  WBCController.cpp  WBCSolver.cpp  WbcController.cpp  WbcWrapper.cpp  WbcWrapper2.cpp  config.yaml  config_solo12.yaml  main.cpp  st_to_cc.cpp
code/controller/stubs/: .cproject  BodyPlannerStub.cpp  CMakeLists.txt  CMakeLists.txt.txt  ControllerStub.cpp  EstimatorStub.cpp  FilterStub.cpp  FootTrajectoryGeneratorStub.cpp  FootstepPlannerStub.cpp  GaitPlannerStub.cpp  GaitStub.cpp  InvKinStub.cpp  MPCStub.cpp  ParamsStub.cpp  StatePlannerStub.cpp  WBCStub.cpp
code/controller/stubs/controller_core/: __init__.py
code/controller/tests/: .cproject
code/controller/tests/python/: .cproject  .project
datasheets/: LM5010 QuickStartCalculator.xls
description/: solo.srdf  solo12.urdf  solo12.urdf.xacro
docs/: BOM.xlsx  Wiring.pptx  installation.txt  theory.xlsx
schematics/: Wiring.pptx
(+933 files in other folders)
